[libquadratureencoder] make it easier to build the test program

--- a/libs/libquatratureencoder/Makefile
+++ b/libs/libquatratureencoder/Makefile
@@ -1,12 +1,17 @@
 
+LIBDIR ?= $(CURDIR)
+BINDIR ?= $(CURDIR)
+INCDIR ?=
+
 DEBUG ?=
 LDFLAGS ?=
-override LDFLAGS += -lpthread
+override LDFLAGS += -L $(LIBDIR) -lpthread
 CFLAGS ?=
 override CFLAGS += $(DEBUG) -Wall
 
-LIBDIR ?= $(CURDIR)
-INCDIR ?=
+ifdef INCDIR
+override CFLAGS += -I $(INCDIR)
+endif
 
 ARCH = $(shell uname -m)
 
@@ -17,9 +22,11 @@ endif
 SRCS = encoder.c
 HDRS = quadrature_encoder.h
 
-.PHONY: all
+.PHONY: all tests
 
 all: $(LIBDIR)/libquadratureencoder.so $(foreach header,$(HDRS),$(INCDIR)/$(header))
+
+tests: $(BINDIR)/encoder_test
 
 $(LIBDIR)/libquadratureencoder.so: $(SRCS) $(HDRS)
 	$(CC) $(CFLAGS) -shared -o $@ $(SRCS) $(LDFLAGS)
@@ -28,3 +35,6 @@ ifdef INCDIR
 $(foreach header,$(HDRS),$(INCDIR)/$(header)): $(HDRS)
 	cp $^ $@
 endif
+
+$(BINDIR)/encoder_test: encoder_test.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS) -lquadratureencoder
